code/tui/snapshots/fullscreen/home/home_worktree_picker.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                                [Dashboard]  
                                                                                
  ╭─────┌── Project worktrees ─────────────────────────────────────[✗]─┐─────╮  
  │     │                                                              │     │  
  │    ▄│  ╭─────────────────────────────────────────────────────────╮ │     │  
  │  ▗█▛│  │ Search worktrees                                        │ │     │  
  │  ▝▜█│  ╰─────────────────────────────────────────────────────────╯ │     │  
  │    ▝│  New worktree  ·  Create at HEAD · no session                │     │  
  │     │> repo  ·  Current · main · /repo                             │     │  
  │     │  topic  ·  Enter to open · main · /worktrees/topic           │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  ╰─────│                                                              │─────╯  
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > Build anything                                                              
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  n New worktree · d delete · / search · Esc close
